@@ -1,3 +1,8 @@
+2011-09-24  Jie Zhang  <jie.zhang@analog.com>
+
+  * src/bus/blackfin.c (bfin_bus_new): Parse default params into a
+    separate param list.
+
 2011-09-06  Mike Frysinger  <vapier@gentoo.org>
 
   * src/bus/mpc8313.c: Use global revbits rather than local, and fix
